Implemented Snackbar when internet connection is lost.

--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="up">Up</string>
 
+    <string name="internet_connectivity">Kindly check your Internet and retry !!!</string>
+
 </resources>
